# XFCEShell

./: .gitignore  Cargo.toml  build.sh  gnome_xfce  style.css  xfce_shell
src/: main.rs
